tests/errors/sem16.kt
fun main() {
    var x: Int = 5 + 3.14; // mismatch
}